[package]
name = "lant"
version = "0.1.0"
edition = "2024"
authors = ["eyeori@icloud.com"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
bytes = "1.10"
chrono = "0.4"
net2 = "0.2"
num_enum = "0.7"
num_enum_derive = "0.7"
path-absolutize = "3.1"
quinn = { version = "0.11", features = ["ring"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", features = ["paw"] }
tokio = { version = "1.47", features = ["full"] }

