[package]
name = "lant"
version = "0.1.0"
edition = "2024"
authors = ["eyeori@icloud.com"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile]
release = { lto = "fat" }

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
net2 = "0.2.39"
num_enum = "0.7.5"
num_enum_derive = "0.7.5"
path-absolutize = "3.1.1"
quinn = { version = "0.11.9", features = ["ring"] }
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

