[package]
name = "lant"
version = "0.1.0"
edition = "2024"
authors = ["eyeori@icloud.com"]
license = "MIT"
documentation = "https://eyeori.xyz/lant/lant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile]
release = { lto = "fat" }

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
net2 = "0.2.39"
num_enum = "0.7.6"
num_enum_derive = "0.7.6"
path-absolutize = "3.1.1"
quinn = { version = "0.11.9", features = ["ring"] }
rustls = "0.24.0-dev.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }

